feat: added concurrency option for fetcher API
